@@ -15,6 +15,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -22,4 +23,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
 }
